--- a/WebStyle/index.html
+++ b/WebStyle/index.html
@@ -36,7 +36,7 @@
       <div class="content">
         <div class="content-details">
           <h1 class="Title">Time travel to the future</h1>
-          <p class="paragraph"> If you want to view your future, ths is the best place. Sign up now and wait for your turn. Hurry, few lucky people will travel.
+          <p class="description"> If you want to view your future, ths is the best place. Sign up now and wait for your turn. Hurry, few lucky people will travel.
           </p>
 
           <div class="search">
@@ -67,10 +67,10 @@
       </div>
     </div>
 
-    <img src="./images/liq-1.png" alt="" class="blob blob-1">
+    <!-- <img src="./images/liq-1.png" alt="" class="blob blob-1">
     <img src="./images/liq-2.png" alt="" class="blob blob-2">
     <img src="./images/liq-3.png" alt="" class="blob blob-3">
-    <img src="./images/liq-6.png" alt="" class="blob blob-4">
+    <img src="./images/liq-6.png" alt="" class="blob blob-4"> -->
 
   </section>
 </body>
