--- a/WebStyle/index.html
+++ b/WebStyle/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav class="nav">
-      <a href="index.html" class="logo-box">
+      <a href="index.html" class="logo-box hue-shift">
         <img src="./images/logo.png" alt="" class="logo">
       </a>
 
@@ -35,13 +35,13 @@
     <div class="container">
       <div class="content">
         <div class="content-details">
-          <h1 class="Title">Time travel to the future</h1>
+          <h1 class="title">Time travel to the future</h1>
           <p class="description"> If you want to view your future, ths is the best place. Sign up now and wait for your turn. Hurry, few lucky people will travel.
           </p>
 
           <div class="search">
             <input type="text" class="search-bar" placeholder="Your email adress" required>
-            <input type="button" class="search-btn" value="Join">
+            <input type="button" class="search-btn hue-shift" value="Join">
           </div>
           
           <div class="sm-list">
@@ -60,17 +60,17 @@
           </div>
         </div>
 
-        <div class="image-group">
+        <div class="image-group hue-shift">
           <img src="./images/liq-5.png" alt="" class="blob-large">
           <img src="./images/liq-4.png" alt="" class="blob-bean">
         </div>
       </div>
     </div>
 
-    <!-- <img src="./images/liq-1.png" alt="" class="blob blob-1">
-    <img src="./images/liq-2.png" alt="" class="blob blob-2">
-    <img src="./images/liq-3.png" alt="" class="blob blob-3">
-    <img src="./images/liq-6.png" alt="" class="blob blob-4"> -->
+    <img src="./images/liq-1.png" alt="" class="blob blob-1 hue-shift">
+    <img src="./images/liq-2.png" alt="" class="blob blob-2 hue-shift">
+    <img src="./images/liq-3.png" alt="" class="blob blob-3 hue-shift">
+    <img src="./images/liq-6.png" alt="" class="blob blob-4 hue-shift">
 
   </section>
 </body>
